[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elden-nav"
version = "0.1.0"
description = "Elden Ring screen-to-map navigation prototype"
requires-python = ">=3.10"

dependencies = [
  "opencv-python>=4.9.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
